--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.15.3",
     "handlebars": "^4.0.10",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "serve-static": "^1.12.3"
   }
 }
