--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
+    "express-handlebars": "^3.0.0",
     "express-session": "^1.15.3",
     "handlebars": "^4.0.10",
+    "mongoose": "^4.10.6",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "serve-static": "^1.12.3"
   }
 }
