--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A test for Node",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
